--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.lindar</groupId>
     <artifactId>jsonquery</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.8</version>
+    <version>1.3.9-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -18,26 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.lindar</groupId>
-            <artifactId>jsonquery-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.lindar</groupId>
-            <artifactId>jsonquery-querydsl-base</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.lindar</groupId>
-            <artifactId>jsonquery-querydsl-jpa</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.lindar</groupId>
-            <artifactId>jsonquery-querydsl-sql</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
